pushing updated html and css

--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
       <div class="col">
         <h1>Contact</h1>
         <br>
-        <h5>Chris Goodman</h5>
+        <h2>Chris Goodman</h2>
         
-        <p>Phone: (901)-355-5752 <br>
-        Email: chris@goodmanmechanical.net</p>
+        <h4>Phone: <a href="tel:9013555752" style="color: white;"><u>(901)-355-5752</u></a> <br>
+        Email: <a href="mailto:chris@goodmanmechanical.net" style="color: white;"><u>chris@goodmanmechanical.net</u></a></h4>
       </div>
     </div>
   </div>
@@ -308,7 +308,7 @@
     }
 
   </script>
-<footer>
+<footer style="margin-bottom:5px;">
   <div class="container">
     <div class="row justify-content-around">
   <small>Copyright Chris Goodman Mechanical 2022&copy;</small>
