--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
   <!-- CONTENT START -->
   <div class="container" id="requestQuoteBanner">
     <div class="row justify-content-center">
-      <div class="col-4">
+      <div class="col-md-4">
         <h1>Experience you can rely on.</h1>
         <h3>Request a quote today!</h3>
       </div>
-      <div class="col-3 align-self-center">
+      <div class="col-md-3 align-self-center">
         <button class="btn btn-primary" id="quoteBTN" onclick="window.location.href='/quote.html'">Get a Quote</button>
       </div>
     </div>
@@ -90,7 +90,7 @@
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
     <img src="assets/images/banner03.jpg" style="width:100%">
-    div class="text">Caption Three</div>
+    
   </div>
 
 </div>
@@ -106,25 +106,25 @@
 <!-- END SLIDESHOW HTML -->
 <div class="container whiteContainer" id="belowBannerTXT">
   <div class="row justify-content-center" id="whyChooseText">
-    <h1>Why Choose Goodman Mechanical?</h1>
+    <h1 class="text-center">Why Choose Goodman Mechanical?</h1>
   </div>
     <div class="row justify-content-between">
 
-      <div class="col text-center">
+      <div class="col-md text-center">
         <img class="blurb" src="assets/images/review.png" width="100" height="100" alt="">
         <h5>Proven Track Record</h5>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque error voluptate neque reprehenderit
           doloremque impedit aspernatur distinctio accusantium, ratione placeat quibusdam saepe excepturi sunt. Sapiente
           laborum perspiciatis repudiandae iste fugiat.</p>
       </div>
-      <div class="col text-center">
+      <div class="col-md text-center">
         <img class="blurb" src="assets/images/experience.png" width="100" height="100" alt="">
         <h5>30 years of Experience</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore magnam voluptas hic voluptatum consequatur
           incidunt doloribus, libero quae, placeat cupiditate vel repudiandae nemo vero ex. Pariatur reprehenderit
           voluptate inventore. Facilis!</p>
       </div>
-      <div class="col text-center">
+      <div class="col-md text-center">
         <img class="blurb" src="assets/images/certification.png" width="100" height="100" alt="">
         <h5>Fully Licensed</h5>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis itaque id ullam provident
@@ -150,9 +150,10 @@
         <br>
         <h4>Hot water and steam boiler service and inspection </h4>
         <br>
-        <h4>Commercial HVAC service repair and installation </h4>
+        
       </div>
       <div class="col-5">
+        <h4>Commercial HVAC service repair and installation </h4>
         <br>
         <h4>Planned maintenance programs </h4>
         <br>
@@ -246,6 +247,15 @@
 
   
   <script type="text/javascript">
+  
+     // NAVBAR COLLAPSE ON CLICK
+    const navLinks = document.querySelectorAll('.nav-item')
+    const menuToggle = document.getElementById('navbarNav')
+    const bsCollapse = new bootstrap.Collapse(menuToggle)
+    navLinks.forEach((l) => {
+        l.addEventListener('click', () => { bsCollapse.toggle() })
+    })
+  
     // SLIDESHOW LOGIC
     var slideIndex = 0;
     showSlides();
