fixed some inconsistencies

--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
     </div>
   </div>
  
-  <!-- OLD BANNER IMAGE START -->
-  <!-- <img id="bannerIMG" src="assets/images/banner01.jpg" alt=""> -->
-  
-
-    <!-- OLD BANNER IMAGE END -->
+ 
 
  <!-- Slideshow container -->
  <div class="slideshow-container">
@@ -95,15 +91,9 @@
 
 </div>
 <br>
-
-<!-- The dots/circles -->
-<!-- <div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>  -->
-
 <!-- END SLIDESHOW HTML -->
+
+
 <div class="container whiteContainer" id="belowBannerTXT">
   <div class="row justify-content-center" id="whyChooseText">
     <h1 class="text-center">Why Choose Goodman Mechanical?</h1>
@@ -178,15 +168,13 @@
         <img src="assets/images/person-icon-1680.png" style="margin-bottom:5%; border: solid blue 1px;" alt="">
       </div>
       <div class="col align-self-center">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis itaque id ullam provident
-          asperiores iure suscipit dolores dolore, quod possimus veritatis eius dolor consequuntur fugiat voluptatum,
-          explicabo rem veniam!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis itaque id ullam provident
-          asperiores iure suscipit dolores dolore, quod possimus veritatis eius dolor consequuntur fugiat voluptatum,
-          explicabo rem veniam!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis itaque id ullam provident
-          asperiores iure suscipit dolores dolore, quod possimus veritatis eius dolor consequuntur fugiat voluptatum,
-          explicabo rem veniam!</p>
+        <p>A native of Horn Lake, Mississippi, Chris Goodman attended XXX School of XXX from 1864-2239 and began his apprencticeship with XXX.
+          After completing his apprenticeship, Chris began his career in HVAC Repair in full.
+        </p>
+        <p>A father of seven, Chris raises his band in his home town of Horn Lake. Avid fan of the New York Knicks and Texas State University football,
+          you'll rarely see him miss a game.
+        </p>
+        <p>Chris has a passion for making people comfortable and enjoys optimizing old machinery to perform to its fullest potential.</p>
         
         
       </div>
